# RAG_Standard

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  OpenSource.md  PRIORITY_MATRIX.md  PRIORITY_ROADMAP.md  README.md  README_EN.md  docker-compose.langfuse.yml  docker-compose.neo4j.yml  docker-compose.weaviate.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  railway.json  railway.toml  temp_issue1.md
.github/workflows/: ci.yml
analysis-results/: README.md
analysis-results/improvements/: architecture.md  code-quality.md  documentation.md  performance.md  roadmap.md  security.md  test-coverage.md
analysis-results/qa/: agent-qa.md  api-layer-qa.md  di-container-qa.md  documents-qa.md  evaluation-qa.md  generation-qa.md  graphrag-qa.md  infrastructure-qa.md  mcp-qa.md  privacy-qa.md  qa-summary.md  retrieval-qa.md  session-qa.md
app/: __init__.py
app/api/: __init__.py  admin.py  chat.py  documents.py  evaluations.py  health.py  image_chat.py  ingest.py  langsmith_logs.py  monitoring.py  prompts.py  upload.py
app/api/routers/: __init__.py  admin_router.py  chat_router.py  tools_router.py  weaviate_admin_router.py
app/api/schemas/: __init__.py  chat_schemas.py  debug.py  evaluation.py  feedback.py
app/api/services/: __init__.py  chat_service.py  rag_pipeline.py
app/batch/: __init__.py  external_crawler.py  metadata_chunker.py  notion_batch.py  notion_client.py
app/batch/metadata_augmentation/: notion_extractor.py
app/config/: base.yaml  routing_rules_v2.yaml  schemas.py  tool_definitions.yaml
app/config/environments/: development.yaml  production.yaml  test.yaml
app/config/features/: batch.yaml  bm25.yaml  cache.yaml  chroma.yaml  circuit_breaker.yaml  domain.yaml  embeddings.yaml  enrichment.yaml  evaluation.yaml  generation.yaml  graph_rag.yaml  langfuse.yaml  llm.yaml  mcp.yaml  mongodb.yaml  notion_pipeline.yaml  privacy.yaml  prompts.yaml  query_expansion.yaml  rag.yaml  reranking.yaml  reranking.yaml.legacy  routing.yaml  self_rag.yaml  session.yaml  sql_search.yaml  weaviate.yaml
app/config/schemas/: __init__.py  base.py  generation.py  reranking.py  reranking_v2.py  retrieval.py  root.py
app/core/: __init__.py  di_container.py  graceful_initializer.py
app/core/interfaces/: storage.py
app/infrastructure/: __init__.py
app/infrastructure/persistence/: __init__.py  connection.py  evaluation_manager.py  helpers.py  models.py  prompt_repository.py
app/lib/: __init__.py  auth.py  circuit_breaker.py  config_loader.py  config_validator.py  cost_tracker.py  env_validator.py  environment.py  ip_geolocation.py  langfuse_client.py  langsmith_client.py  llm_client.py  logger.py  metrics.py  mongodb_client.py  prompt_sanitizer.py  query_utils.py  score_normalizer.py  types.py  weaviate_client.py  weaviate_setup.py
app/lib/errors/: README.md  __init__.py  codes.py  exceptions.py  formatter.py  messages.py
app/middleware/: error_logger.py  rate_limiter.py
app/models/: __init__.py  evaluation.py  prompts.py
app/modules/: __init__.py
app/modules/core/: __init__.py
app/modules/ingestion/: factory.py  interfaces.py  service.py
data/prompts/: extraction_prompts.json  prompts.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  DOMAIN_GUIDE.md  EVALUATION_SYSTEM.md  INGESTION.md  PRODUCTION_IMPROVEMENT_ROADMAP.md  PRODUCTION_READINESS_VERIFICATION.md  README.md  SETUP.md  SYSTEM_ANALYSIS_AND_IMPROVEMENTS.md  TECHNICAL_DEBT_ANALYSIS.md  config_management_improvements.md  tutorial.md
docs/plans/: 2026-01-07-comprehensive-system-analysis.md  2026-01-08-phase1-critical-fixes.md  2026-01-09-error-message-improvement.md  2026-01-09-error-system-v2-improvement.md  2026-01-09-multi-vectordb-design.md  2026-01-09-multi-vectordb-implementation.md  2026-01-09-next-improvements-priority.md  2026-01-09-quick-wins-implementation.md  2026-01-19-reranker-config-refactoring.md  2026-01-26-environment-config-separation.md  2026-01-30-verify-system-design.md  SEC-001-production-auth-bypass-fix.md  error-code-mapping.md  phase2-error-log-management.md  phase4-log-message-unification.md
docs/standards/: error_message_standards.md  logging_standards.md
easy_start/: .env.local  chat.py  load_data.py  run.py
frontend/: vite.config.ts
frontend/docs/: BRAND_CONFIGURATION_GUIDE.md
frontend/src/services/: api.ts  createChatWebSocketService.ts
notebooks/: 01_quickstart.ipynb  02_api_exploration.ipynb  03_evaluation_demo.ipynb  README.md
quickstart/: load_sample_data.py  sample_data.json
quickstart_local/: chat.py
scripts/: README.md  backup_weaviate.py  check_weaviate.py  check_weaviate_duplicates.py  check_weaviate_schema.py  create_prompts_table.py  create_tables_railway.py  deploy-railway.sh  index_all_data.py  quick_analyze.py  run_eval.py  run_migration_003.py  search_weaviate.py  setup-langfuse-env.sh  setup_batch_tables.py  start-langfuse.sh  stop-langfuse.sh
scripts/migrations/: 001_create_prompts_table.sql  002_create_batch_tables.sql  002_create_notion_metadata_collection.py  003_add_running_status.sql  003_insert_initial_parsing_rules.sql  BATCH_SYSTEM_SETUP.md  README.md
tests/: __init__.py  conftest.py  test_main_startup.py
tests/integration/: test_data_consistency.py  test_evaluation_system.py  test_graphrag_e2e.py  test_hybrid_search_auto.py  test_hybrid_search_integration.py  test_ingestion_flow.py  test_memory_leak_prevention.py  test_neo4j_integration.py  test_operational_stability.py  test_scoring_integration.py  test_session_race_condition.py  test_streaming_e2e.py
tests/integration/api/: test_admin_auth.py  test_admin_debug_endpoint.py  test_e2e_debug_flow.py
tests/integration/embedding/: test_local_embedder_integration.py
tests/lib/: __init__.py  test_auth_security.py  test_config_validator.py  test_environment.py
tests/modules/ingestion/: test_csv_streaming.py  test_encoding_detection.py
tests/unit/: __init__.py
tests/unit/agent/: __init__.py  test_executor.py  test_factory.py  test_interfaces.py  (+4 more)
(+267 files in other folders)
